# IK_MORF

./: .gitattributes  README.md
catkin_ws/devel/: .catkin
catkin_ws/devel/lib/: libdoublefann.so.2.2.0  libfann.so.2.2.0  libfixedfann.so.2.2.0  libfloatfann.so.2.2.0
catkin_ws/devel/lib/morf_IK/: IK_controller  main  mainCPG  mainIK
catkin_ws/devel/lib/morf_ik/: ann_config.txt  ann_config.yml  calib  gaits  gen_data  gen_data_eqs  gen_data_ik  gen_data_real  gen_data_sim  main  main_eqs  main_nn  main_sim  matrices.yml  morf_controller_real  morf_transfer_controller.yml  morf_transfer_genData.yml  morf_transfer_nn.yml  nn  nn_babbling  nn_eqs  nn_real  nn_real2  nn_real3  nn_sim  plot_res.py  process_real_data  save_gen_data_real  sort_data  sort_data2  sort_data_real  sort_data_sim
catkin_ws/devel/lib/morf_ik/babbling_data/: aux1.data  aux1_in.data  aux3.data  aux3_in.data  input.data  output.data  plot_all_data.py  plot_all_data2.py  plot_all_data_cube.py
catkin_ws/devel/lib/morf_ik/babbling_data_old/: 000.data  001.data  010.data  011.data  020.data  021.data  022.data  030.data  031.data  032.data  033.data  040.data  041.data  042.data  043.data  100.data  101.data  102.data  110.data  111.data  120.data  121.data  122.data  130.data  131.data  132.data  133.data  140.data  141.data  142.data  143.data  200.data  201.data  202.data  210.data  211.data  220.data  221.data  222.data  230.data  (+38 more)
catkin_ws/devel/lib/morf_ik/data/: ann.net  ann_batch_01_05_01_100000.net  ann_batch_08_10_005_13568.net  ann_batch_10_15_005_8938.net  ann_batch_10_20_005_5362.net  batch_01_05_01_36234.net  batch_01_100_03_5000.net  batch_01_40_03_5000.net  ik.net  plot_data.py  train.data  train003.data  train005.data  train013.data  train014.data  train020.data  train030.data  train031.data  train032.data  train041.data  train103.data  train104.data  train113.data  train120.data  train125.data  train131.data  train132.data  train141.data  train152.data  train153.data  train200.data  train204.data  train205.data  train210.data  train215.data  train220.data  train231.data  train232.data  train233.data  train241.data  (+21 more)
catkin_ws/devel/lib/morf_ik/data_1nn/: batch_01_05_01_100000_028.net
catkin_ws/devel/lib/morf_ik/data_4div/: train003.data  train020.data  train032.data  train103.data  train113.data  train200.data  train210.data  train231.data  train232.data  train233.data  train300.data  train310.data  train321.data  train332.data  train333.data  vali003.data  vali013.data  vali020.data  vali031.data  vali032.data  vali103.data  vali113.data  vali120.data  vali131.data  vali132.data  vali200.data  vali210.data  vali220.data  vali231.data  vali232.data  vali233.data  vali300.data  vali310.data  vali320.data  vali321.data  vali332.data  vali333.data
catkin_ws/devel/lib/morf_ik/data_4div_bigger/: train001.data  train012.data  train013.data  train020.data  train022.data  train023.data  train032.data  train033.data  train100.data  train111.data  train122.data  train123.data  train132.data  train201.data  train202.data  train211.data  train212.data  train213.data  train220.data  train221.data  train222.data  train223.data  train233.data  train302.data  train303.data  train312.data  train313.data  train323.data  vali000.data  vali002.data  vali010.data  vali012.data  vali020.data  vali021.data  vali022.data  vali031.data  vali101.data  vali103.data  vali112.data  vali120.data  (+14 more)
catkin_ws/devel/lib/morf_ik/data_5div_bigger/: train002.data  train011.data  train012.data  train013.data  train021.data  train022.data  train024.data  train031.data  train033.data  train103.data  train113.data  train114.data  train133.data  train134.data  train144.data  train202.data  train212.data  train222.data  train231.data  train232.data  train234.data  train244.data  train304.data  train310.data  train311.data  train313.data  train314.data  train322.data  train333.data  train334.data  train403.data  train404.data  train413.data  train414.data  vali002.data  vali010.data  vali012.data  vali014.data  vali021.data  vali031.data  (+37 more)
catkin_ws/devel/lib/morf_ik/data_6div/: plot_data.py  train004.data  train015.data  train020.data  train025.data  train052.data  train053.data  train054.data  train114.data  train120.data  train130.data  train214.data  train220.data  train225.data  train230.data  train252.data  train254.data  train310.data  train320.data  train331.data  train341.data  train352.data  train353.data  train354.data  train355.data  train410.data  train420.data  train443.data  train455.data  train501.data  train521.data  train542.data  vali004.data  vali005.data  vali014.data  vali015.data  vali020.data  vali025.data  vali030.data  vali041.data  (+51 more)
catkin_ws/devel/lib/pkgconfig/: morf_IK.pc  morf_ik.pc
catkin_ws/src/morf_IK/: CMakeLists.txt
catkin_ws/src/morf_IK/include/: controller.cpp  controller.hpp  coordinates.cpp  coordinates.hpp
catkin_ws/src/morf_IK/src/: IK_controller.cpp  main.cpp  mainIK.cpp  main_CPG.cpp
catkin_ws/src/morf_ik/: CMakeLists.txt
catkin_ws/src/morf_ik/include/: controller.cpp  controller.hpp  controller_real.cpp  controller_real.hpp  coordinates_real.cpp  coordinates_real.hpp
catkin_ws/src/morf_ik/src/: calibration.cpp  gaits.cpp  gen_data.cpp  gen_data_eqs.cpp  gen_data_fl.cpp  gen_data_ik.cpp  gen_data_real.cpp  gen_data_sim.cpp  main.cpp  main_eqs.cpp  main_eqs_data.cpp  main_nn.cpp  main_nn_data.cpp  main_real.cpp  main_sim.cpp  nn.cpp  nn_eqs.cpp  nn_real.cpp  nn_real2.cpp  nn_real3.cpp  nn_sim.cpp  process_real_data.cpp  save_gen_data_real.cpp  sort_data.cpp  sort_data2.cpp  sort_data_real.cpp  sort_data_sim.cpp  test_real.cpp
catkin_ws_old/devel/: .rosinstall  local_setup.sh  setup.sh
catkin_ws_old/devel/lib/morf_IK/: IK_controller
catkin_ws_old/devel/lib/pkgconfig/: morf_IK.pc
catkin_ws_old/src/morf_IK/: package.xml
simulations/: MORF.ttt  MORF_CPG_test.ttt  MORF_DMP_test.ttt  MORF_IK.ttt  MORF_IK_test.ttt  MORF_babbling.ttt  MORF_calib.ttt  MORF_cam_block.ttt  MORF_cam_test.ttt  MORF_cam_test2.ttt  MORF_gen_data.ttt  MORF_test.ttt  MORF_videos.ttt
(+6196 files in other folders)
